5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1595_2895.log
== TEST (2019-03-26 17:11:25) 
-- CODE:
var = input()
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:27) 
-- CODE:
var = input()
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:29) 
-- CODE:
var = input()
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:11:30) 
-- CODE:
var = input()
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:12:12) 
-- CODE:
var = input(5)
-- EXECUTION TIME:
0.145066
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
5
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
5
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:13) 
-- CODE:
var = input(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:12:19) 
-- CODE:
var = input(5)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:20) 
-- CODE:
var = input("frete(5)")

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:50) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100)")

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:52) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100)")

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:54) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100)")

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:13:59) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100)")

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:00) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100)")

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:14:57) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE"())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input("FretE"())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:15:40) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input("FretE"())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:17:24) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input("FretE"())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:17:45) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input("FretE"())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:17:53) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = input("FretE"())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:03) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input(frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:09) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input(frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(frete)
NameError: name 'frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:16) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input(Frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Frete)
NameError: name 'Frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:17) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input(Frete)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Frete)
NameError: name 'Frete' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:25) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input("Frete")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:43) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input("Frete")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:18:44) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")
var = input("Frete")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:19:06) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(50.0)")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:19:23) 
-- CODE:
var = input("frete(5)")
var = input("Frete(100.0)")
var = input("FretE(40.0)")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:08:10) 
-- CODE:
q=float(input("Insira a quantidade de jogos encomendados"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:09:31) 
-- CODE:
q= float(input("Insira a quantidade de jogos encomendados"))
v= float(input("Insira o valor do jogo"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 02:10:06) 
-- CODE:
q= float(input("Insira a quantidade de jogos encomendados"))
v= float(input("Insira o valor do jogo"))
f= float(input("Insira o valor do frete"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:10:52) 
-- CODE:
q= float(input("Insira a quantidade de jogos encomendados"))
v= float(input("Insira o valor do jogo"))
f= float(input("Insira o valor do frete"))

c= q*v+f

print(c)
-- EXECUTION TIME:
0.143067
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:37:52) 
-- CODE:
q= float(input("Insira a quantidade de jogos encomendados"))
v= float(input("Insira o valor do jogo"))
f= float(input("Insira o valor do frete"))

c= q*v+f

print(c)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:38:20) 
-- CODE:
q= float(input("Insira a quantidade de jogos encomendados:"))
v= float(input("Insira o valor do jogo:"))
f= float(input("Insira o valor do frete:"))

c= q*v+f

print(c)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 13:36:56) 
-- CODE:
q= float(input("Insira a quantidade de jogos encomendados:"))
v= float(input("Insira o valor do jogo:"))
f= float(input("Insira o valor do frete:"))

c= q*v+f

print(c)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:12:58) 
-- CODE:
q= int(input("Insira a quantidade de jogos encomendados:"))
v= float(input("Insira o valor do jogo:"))
f= float(input("Insira o valor do frete:"))

c= q*v+f

print(c)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:13:21) 
-- CODE:
q= int(input("Insira a quantidade de jogos encomendados:"))
v= float(input("Insira o valor do jogo:"))
f= float(input("Insira o valor do frete:"))

c= q*v+f

print(c)

-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
